Fix long offence title layout issue
Long charge/offence titles were causing layout issues with the following
content. Fixed by moving the charge title to its own header, and
tweaking styles a tad.

[MAPDEV508]

--- a/make_a_plea/assets-src/stylesheets/_main.scss
+++ b/make_a_plea/assets-src/stylesheets/_main.scss
@@ -142,14 +142,16 @@ Main styles
 
 		.change-link {
 			float: right;
-			margin: .1em 0 0 1em;
+			margin: 0 0 0 1em;
 			@include core-19;
-
-			@include media(tablet) {
-				margin-top: .2em;
-			}
 		}
 	}
+
+	.charge-title {
+		clear: both;
+		margin-top: 0;
+	}
+
 
 	dl {
 		margin: 0;
